2010-04-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move conditionally-compiled test programs to yarrrr.c.

	* yarrrr.c: New file.
	* Makefile.am (EXTRA_DIST): Add yarrrr.c.
	(YALL, YPROGS): New vars.
	(y-STR2TIME, y-FCMP, y-PAIRS, y-KEEP, y-LEX, y-REV, y-SYN)
	(y-all, y-clean): New targets.
	* base.h: Comment munging; nfc.
	* maketime.c [TEST]: Delete #ifdef .. #endif block.
	* rcsfcmp.c [FCMPTEST]: Likewise.
	* rcsfnms.c [PAIRTEST]: Likewise.
	* rcskeep.c [KEEPTEST]: Likewise.
	* rcslex.c [LEXDB]: Likewise.
	* rcsrev.c [REVTEST]: Likewise.
	* rcssyn.c [SYNTEST]: Likewise.

2010-04-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: minus_p

	* base.h (minus_p): New func decl.
	* rcsutil.c (minus_p): New func.
	* rcsdiff.c (main): Use ‘minus_p’.
	* rcsmerge.c (main): Likewise.

2010-04-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] For ‘co -j’, save merge(1)-command args in ‘SINGLE’.

	* co.c (buildjoin): Save arg strings in ‘SINGLE’.

2010-04-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Encapsulate ‘pairnames’ probe protocol state entirely.

	* base.h (maybe): New struct.
	(open_rcsfile_fn): Rename from ‘open_rcsfile_fn_t’; rewrite arglist.
	(rcswriteopen, rcsreadopen, pairnames): Update func decls.
	* rcsedit.c (naturalize): Take ‘struct maybe *’; use its space
	intead of a local one; don't save new filename in ‘SINGLE’.
	(rcswriteopen): Take ‘struct maybe *’; update call to ‘naturalize’;
	save not-yet-validated filenames in ‘m->space’; don't save to
	‘SINGLE’ until after validation; pass ‘m->status’ to ‘fro_open’.
	* rcsfnms.c (rcsreadopen): Take ‘struct maybe *’.
	(maybe): Delete struct.
	(finopen): Update call to ‘m->open’; update ‘m->bestfit’ assignment.
	(fin2open): Build the strings in ‘m->space’; point ‘m->tentative’.
	(pairnames): Update type name of ‘rcsopen’ in arglist; set
	‘maybe.status’; make a space for ‘maybe.space’; update ‘maybe.bestfit’
	init; update call to ‘rcsopen’; close space before returning.
